--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
       {% endif %}
       {% endfor %}
+      <a class="sidebar-nav-item" href="https://hc.instructure.com/courses/4290">Canvas</a>
 
     </nav>
 
