--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -138,8 +138,8 @@ hr {
   position: relative;
   margin: 1.5rem 0;
   border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #d28445;
+  border-bottom: 1px solid #d28445;
 }
 
 abbr {
